--- a/stytles.css
+++ b/stytles.css
@@ -1,3 +1,28 @@
 body{
   background-color: tan;
 }
+
+header{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+h1{
+  font-size: 50px;
+}
+
+a{
+  border-style: outset; border-color: black;
+  background-color: green;
+  color: black;
+  height: 20px; width: 120px;
+  display: flex; justify-content: center;
+}
+
+p{
+  font-size: larger;
+}
