second page content and styling

--- a/stytles.css
+++ b/stytles.css
@@ -23,6 +23,18 @@ a{
   display: flex; justify-content: center;
 }
 
-p{
+p, label{
   font-size: larger;
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+div{
+  display: flex;
+  justify-content: space-evenly;
 }
